# CMakeUtils

./: .gitignore  CMakeLists.txt  Jenkinsfile  LICENSE  README.md  bootstrap.py  kickstart.py  pytest.ini  runtest.sh
resources/: build_sh.template  doxyfile.in.template  echo_cpp.template  echo_hpp.template  gitignore.template  license.template  readme.template  root_cmakelists.template  sampletest_cpp.template  src_cmakelists.template  test_cmakelists.template
samples/c-project/: CMakeLists.txt
samples/c-project/minus/: CMakeLists.txt
samples/c-project/minus/include/: minus.h
samples/c-project/minus/src/: minus.c
samples/c-project/plus/: CMakeLists.txt
samples/c-project/plus/include/: plus.h
samples/c-project/plus/src/: plus.c
samples/c-project/program/: CMakeLists.txt  main.c
samples/c-project/test/: MinusTest.cpp  PlusTest.cpp
samples/cpp-project/: CMakeLists.txt
samples/cpp-project/plus/: CMakeLists.txt
scripts/: CMakeUtils.cmake
test/: BuildDebianPackageTest.py  BuildInterfaceTest.py  BuildProgramTest.py  BuildSharedLibraryTest.py  BuildStaticLibraryTest.py  BuildTestProgramTest.py  CheckTest.py  OptionsTest.py  cmaketest.py
test/CrossCompilingEmulatorOption/: CMakeLists.txt  MyTest.cpp
test/Interface/: CMakeLists.txt
test/PackageLibWithPrivateHeader/: CMakeLists.txt  a.cpp
test/PackageProgram/: CMakeLists.txt
test/PackageTestProgram/: CMakeLists.txt
test/Program/: CMakeLists.txt
test/ProgramWithAnotherProgram/: CMakeLists.txt  b.cpp
test/ProgramWithCustomAlias/: CMakeLists.txt
test/ProgramWithFlags/: CMakeLists.txt  c.c  c.h  cpp.cpp
test/ProgramWithNamingOptions/: CMakeLists.txt
test/ProgramWithPrivateHeader/: CMakeLists.txt  main.cpp
test/ProgramWithPublicHeader/: CMakeLists.txt
test/ProgramWithReleaseMode/: CMakeLists.txt
test/SharedLib/: CMakeLists.txt
test/SharedLibWithAnotherLib/: CMakeLists.txt  b.cpp
test/SharedLibWithCustomAlias/: CMakeLists.txt
test/SharedLibWithFlags/: CMakeLists.txt
test/SharedLibWithNamingOptions/: CMakeLists.txt
test/SharedLibWithPrivateHeader/: CMakeLists.txt
(+70 files in other folders)
